# rust-rawspeed

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  interop.cpp  rawspeed_interop.cpp
benches/: example.rs
rawspeed-sys/: Cargo.toml  build.rs  interop.cpp  interop.h
rawspeed-sys/src/: bindings.cpp  bindings.h  lib.rs
src/: camera_metadata.rs  decode.rs  ffi.rs  lib.rs  macros.rs  raw_image.rs
test_data/: test.cr2
